phpBMS v0.611/ BMS module v0.611
==================================
- Fixed tasks display problem.
- Adjusted widths/truncation onf invoice PDF reports for line items.


phpBMS v0.61/ BMS module v0.61
==================================
- Fixed display errors with dateTime column format.
- Added Dude Date to tasks on snapshot view.
- Reversed sort order of tasks on snapshot view.
- Added Checks for prexisting repeatable tasks before creating.
- Fixed date formating in Javascript.
- Fixed shipping charge fill in problem.
- Added footer to notes and user add/edit screens.
- Fixed syntax error on required datepicker fields.
- Removed uneeded code from notes timestamp button.
- Added check for magic quotes php setting before adding slashes.
- Added workaround for IIS systems that do not have REQUEST_URI variable.
- Fixed snapshot day interval for Mondays.
- Fixed undefined variabl problem with prerequisites.
- Fixed admin page requiments for shipping multiplier and zip code.
- Fixed label for module in table definitions edit screen.
- Fixed choicelist undefined variable problem.
- Fixed Syntax error (spelling) with getUserName common function.
- Fixed undefined variables problem in notes edit page.
- Fixed undefined variable problem with line item autofill.
- Fixed link to mYSQL database error.
- Fixed validation of time fields.
- Fixed autofill of part name on invoices and problem with very long part names.
- Fixed undefined variable bug with printing.
- Added greater flexibility with phone validation (country codes, extensions etc.).
- Added license to the top of every page with code.
- Consolidated currency functions.
- Added UPC to products.
- Fixed compatibilty problem with MySQL 5 and reserved words.
- Modified Snapshot to load snapshot sections from each individual module.
- Moved non MySQL settings to new settings table.
- Added record number to tasks/assignments on snapshot.
- Moved logo to database.